@@ -1275,16 +1275,12 @@ class DevicePopManager implements IDevicePopManager {
         )
                 .setKeySize(keySize)
                 .setSignaturePaddings(
-                        KeyProperties.SIGNATURE_PADDING_RSA_PKCS1,
-                        KeyProperties.SIGNATURE_PADDING_RSA_PSS
+                        KeyProperties.SIGNATURE_PADDING_RSA_PKCS1
                 )
                 .setDigests(
-                        KeyProperties.DIGEST_MD5,
                         KeyProperties.DIGEST_NONE,
                         KeyProperties.DIGEST_SHA1,
-                        KeyProperties.DIGEST_SHA256,
-                        KeyProperties.DIGEST_SHA384,
-                        KeyProperties.DIGEST_SHA512
+                        KeyProperties.DIGEST_SHA256
                 ).setEncryptionPaddings(
                         KeyProperties.ENCRYPTION_PADDING_RSA_OAEP,
                         KeyProperties.ENCRYPTION_PADDING_RSA_PKCS1
@@ -1346,16 +1342,12 @@ class DevicePopManager implements IDevicePopManager {
                 mKeyManager.getKeyAlias(), purposes)
                 .setKeySize(keySize)
                 .setSignaturePaddings(
-                        KeyProperties.SIGNATURE_PADDING_RSA_PKCS1,
-                        KeyProperties.SIGNATURE_PADDING_RSA_PSS
+                        KeyProperties.SIGNATURE_PADDING_RSA_PKCS1
                 )
                 .setDigests(
-                        KeyProperties.DIGEST_MD5,
                         KeyProperties.DIGEST_NONE,
                         KeyProperties.DIGEST_SHA1,
-                        KeyProperties.DIGEST_SHA256,
-                        KeyProperties.DIGEST_SHA384,
-                        KeyProperties.DIGEST_SHA512
+                        KeyProperties.DIGEST_SHA256
                 ).setEncryptionPaddings(
                         KeyProperties.ENCRYPTION_PADDING_RSA_OAEP,
                         KeyProperties.ENCRYPTION_PADDING_RSA_PKCS1
