@@ -1,6 +1,7 @@
 Version 3.6.0
 ----------
 - [PATCH] Allow retry generation of Device PoP key without attempting attestation cert gen (#1456, #1507)
+- [MAJOR/MINOR (Rebrand)] Please note! This is technically an API breaking change that we have elected to voluntarily ship as "MINOR" due to lack of usage. Removes support for SHA-384/512, MD5 w. RSA due to incompatibilities on certain devices (#1489)
 
 Version 3.5.0
 ----------
